<resources>
    <string name="app_name">Hygiene Kleen</string>
    <string name="url">http://43.157.201.56/</string>
    <string name="app_version">V 1.0.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_string">Sedang mengambil data . . . </string>
    <string name="loading_string_progress">Sedang memproses data . . . </string>
    <string name="loading_string2">Silahkan tunggu . . . </string>
    <string name="text_empty_list_weekly_progress">Tidak ada daftar daily progress saat ini. Silakan buat daily progress terlebih dahulu dengan klik pada tombol Mulai Aktivitas di Area pada halaman inspeksi.</string>
    <string name="konfirmasi_checklist_on_checkbox">Saya mengkonfirmasi bahwa pekerjaan yang dilakukan karyawan sudah benar</string>
    <string name="home_app_title">Hygiene Kleen</string>
    <string name="user_nuc">Unknown NUC</string>
    <string name="user_name">Unknown Name</string>
    <string name="user_job">Unknown Position</string>
    <string name="user_project">Unknown Project</string>
    <string name="user_work_status">Unknown Working Status</string>
    <string name="home_info_bertugas">Selamat menjalankan tugas hari ini</string>
    <string name="home_info_belum_absen">Lakukan absen sebelum bertugas</string>
    <string name="text_only_one_face">Hanya boleh terdapat 1 wajah saja</string>
    <string name="text_no_face">Wajah tidak terdeteksi</string>
    <string name="text_face_is_out">Pastikan wajah anda berada di area tedeksi, tidak terlalu dekat / jauh</string>
    <string name="email_not_verified_dialog_title">Email belum terverifikasi</string>
    <string name="email_not_verified_dialog_message">Klik di sini untuk kirim ulang \npesan verifikasi e-mail</string>
    <string name="email_error">Hmm, salah format. Contoh: name@email.com.</string>
    <string name="no_ho_error">Hmm, nomor setidaknya harus 8 digit.</string>
    <string name="password_error">Masukkan kata sandi minimal 6 karakter.</string>
    <string name="empty_schedule_management">Tidak ada rencana kunjunganpada tanggal ini</string>
    <string name="empty_schedule_management_english">You don\'t have any visit reports for this date</string>
    <string name="login_activity_login_failed_dialog_title">Gagal Masuk</string>
    <string name="login_activity_login_failed_dialog_message">Masukkan e-mail dan \npassword yang benar.</string>
    <string name="login_activity_login_failed_dialog_btn_coba_lagi">Coba lagi</string>
    <string name="not_verified_dialog_button">Kirim Ulang</string>
    <string name="forgot">Tolong masukkan email yang terdaftar, kami akan mengirimkan kode verifikasi ke email yang terdaftar.</string>
    <string name="otp">Kode verifikasi telah dikirimkan ke <font color="#79bee1"> . . . @gmail.com</font></string>
    <string name="tv_forgotpass">Tolong masukkan password baru anda</string>
    <string name="pilih_project">Pilih Project</string>
    <string name="daftar_nik_nuc">Tolong masukkan NUC dan Nomor Induk Kependudukan(NIK) kamu terlebih dahulu.</string>
    <string name="daftar_email">Silahkan tambahkan email kamu untuk mempermudah login Care Ops.</string>
    <string name="daftar_verif">Kode verifikasi telah dikirimkan ke</string>
    <string name="daftar_password">Tolong masukkan password Anda</string>
    <string name="error_email">\@gmail.com</string>
    <string name="pendaftaran_berhasil">Pendaftaran Berhasil</string>
    <string name="absen_dahulu">Mohon absen terlebih dahulu</string>
    <string name="tuliskan_catatan">Tuliskan catatan</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="belum_absen">Anda belum melakukan absen masuk. Silahkan klik pada absen masuk terlebih dahulu.</string>
    <string name="belum_waktunya">Anda belum bisa melakukan absen.</string>
    <string name="lewat_waktunya">Waktu absen pulang anda sudah lebih 2 jam.</string>
    <string name="waktunya_lewat">Anda tidak dapat melakukan absen. Jadwal anda sudah lewat.</string>
    <string name="checklis">Harap lengkapi checklist Anda.</string>
    <string name="belum_checked">Anda belum melakukan checklist, mohon buka menu checklist dan menyelesaikan Checklist DAC.</string>
    <string name="belum_checkout">Anda belum melakukan checkout di jadwal sebelumnya.</string>
    <string name="confirm_dac_checklist">Apakah anda telah menyelesaikan semua pekerjaan anda?</string>
    <string name="confirm_permission_izinkan">Apakah anda yakin untuk mengizinkan orang ini?</string>
    <string name="confirm_permission_tolak">Apakah anda yakin untuk menolak izin orang ini?</string>
    <string name="denial">Apakah anda ingin menolak cso ini?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_desc_update_profile">Hai, Hygiene Kleen People. Silakan update data Anda. Pastikan data-data yang dimasukkan sudah benar, terutama data identitas seperti : NIK, status pernikahan, jumlah anak.\n \n Silakan klik pada bagian profile dan dokumen untuk melengkapi data tersebut.</string>
    <string name="text_dialog_last_update_profile">Pastikan data-data yang dimasukkan sudah benar, seperti data : NIK, nama Bank &amp; nomor rekening, status pernikahan, &amp; jumlah anak. \n \n Silakan klik menu profile jika Anda ingin memperbarui data. </string>
    <string name="new_update_info">Hai, Hygiene Kleen People.  Update aplikasi terlebih dahulu agar Anda tetap bisa mengakses fitur-fitur yang tersedia.</string>
    <string name="dialog_edit_profile1">Hai, Hygiene Kleen People. Setelah kami cek, datamu masih belum lengkap. \n \n Yuk, isi Profile terlebih dahulu supaya Anda tetap bisa menggunakan fitur-fitur yang tersedia.</string>
    <string name="dialog_edit_profile2">Silakan klik pada bagian profile dan dokumen untuk melengkapi data tersebut.</string>
    <string name="empty_project_search">Project yang Anda cari tidak ditemukan atau berada di luar pengawasan. Coba ulangi menggunakan kata kunci lainnya.</string>
    <string name="visit_tracking_info">Pantau aktivitas di project secara rutin. Lakukan absen masuk dan keluar setiap kali kunjungan ke project.</string>
    <string name="visit_history_info">pilih salah satu tanggal atau tentukan tanggal dari dan sampai jika ingin melihat laporan dalam periode tertentu.</string>
    <string name="move_project_check_in">Silakan pilih project dan lakukan absen masuk terlebih dahulu</string>
    <string name="move_project_check_out">Silakan pilih project dan lakukan absen keluar kunjungan sebelumnya terlebih dahulu</string>
    <string name="info_upload_photo_permission">Silakan unggah foto surat keterangan izin atau sakit. Permohonan Izin atau Sakit tanpa menyertakan surat akan mempengaruhi perhitungan absensi Anda. Foto surat dapat diunggah nanti jika surat sudah tersedia.</string>
    <string name="info_upload_photo_detail_permission">*Fitur upload berlaku jika foto belum di upload saat pengajuan izin, dan hanya diberikan kesempatan sekali upload.\n*Anda tidak dapat upload foto setelah 24 jam Izin disetujui Pengawas atau Manajemen.</string>
    <string name="Melengkapi_profile">Perhatian! Anda belum melengkapi semua data-data yang dibutuhkan. Yuk, isi data-data di bawah.</string>
    <string name="title_isi_kk">Hygiene Kleen People, isi data berikut untuk keperluan verifikasi data pribadi. Pastikan Anda memberikan nomor KK yang benar.</string>
    <string name="title_rekening">Kami memerlukan informasi bank dan rekeningmu untuk transaksi bulanan. Pastikan Anda memberikan data yang benar.</string>
    <string name="notes_download1">*Laporan dibuat dalam format file Pdf (.pdf)</string>
    <string name="notes_download2"><![CDATA[**Data yang diambil adalah daftar komplain CFTalk & CTalk di project yang dipilih]]></string>
    <string name="info_service_management">*Total cuti sebanyak 12 hari selama setahun.\n*Izin tidak hadir karena alasan tertentu akan mengurangi jatah cuti. Cuti bersama juga mengurangi jatah cuti.</string>
    <string name="info_service">*Per bulan maksimal 5 kali izin, dan maksimal 3 kali alpa. Jika sudah mencapai batas maksimum atau lebih, Anda akan mendapat SP.</string>
    <string name="warning_back_audit">Jika Ya, semua komponen atau data yang sudah disi akan hilang dan Anda harus ulang dari awal. Klik tombol Submit untuk menyimpan laporan.</string>
    <string name="warning_submit_audit">Apakah Anda yakin untuk submit penilaian? Jika Ya, maka Anda tidak bisa mengubah penilaian.</string>
    <string name="new_feature_mekari_1">Kami membantu Anda mengelola kebutuhan finansial. Anda dapat akses ke dana darurat secara cepat untuk penuhi kebutuhan-kebutuhan finansial yang tidak terduga. Pastikan stres finansial tidak menghambat produktivitas Anda.</string>
    <string name="new_feature_mekari_2">Fitur ini tersedia hanya bagi karyawan yang sudah bekerja selama 3 bulan atau lebih. Segera daftarkan akun MEKARI Flex Anda.</string>
    <string name="info_regis_mekari_success">Selanjutnya, MEKARI Flex akan mengirimkan link aktivasi akun via email. Cek email Anda secara berkala dan segera lakukan aktivasi.</string>
    <string name="info_regis_mekari_failed">Ada data-data yang belum dilengapi nih. Yuk, lengkapi data terlebih dahulu di menu Profile. Setelah itu, silakan kembali ke menu Pinjaman dan ulangi registrasi akun MEKARI Flex.</string>
    <string name="titleWarnJamsostek">Pastikan foto dokumen terlihat jelas karena akan disimpan sebagai verifikasi data</string>
    <string name="defaultimageBpjs">defaultImageBpjs</string>
    <string name="updateBpjs"><![CDATA[Update Nomor & Foto Dokumen]]></string>
    <string name="descQuestionLocation">Melalui fitur ini sistem secara otomatis mengambil data lokasi Anda berada saat ini. Oleh karena itu, Fitur lokasi atau GPS harus diaktifkan terutama pada saat jam kerja.</string>
    <string name="descSubQuestionLocation">Pastikan Anda sudah mengaktifkan lokasi atau GPS saat menggunakan aplikasi ini.</string>
    <string name="valdasi_imei">Anda tidak dapat login di HP ini. Silakan login menggunakan HP terdaftar atau hubungi admin jika HP Anda mengalami masalah.</string>
    <string name="fake_gps_pop_up">Kami mendeteksi Anda menggunakan aplikasi FAKE GPS untuk mengambil titik lokasi absensi. Silakan aktifkan kembali fitur lokasi bawaan dan pastikan Anda berada di area absensi.</string>
    <string name="successAttendanceUserFlying">Laporan absensimu berhasil disimpan dalam sistem kami. Selanjutnya menunggu approval dari pengawas tertinggi area atau Field Manager terlebih dahulu.</string>
    <string name="failedAttendanceUserFlying">Gagal mengirim absensi, silahkan coba lagi.</string>
    <string name="title2Fr">Kini absensi Hygiene Kleen dilengkapi fitur Face Recognition untuk mengenali identitas Anda dan memastikan data absensi tercatat dengan benar.</string>
    <string name="empty_list_late_report">Awesome!\nThere is no lateness data this month.</string>
    <string name="text_update_data">Update Data</string>
    <string name="text_tittle_dialog_last_update">Apakah data profilemu sudah lengkap?</string>
    <string name="text_choose_image">Pilih Gambar</string>
    <string name="text_camera">Kamera</string>
    <string name="text_galery">Galeri</string>
    <string name="text_ringkasan">Ringkasan</string>
    <string name="text_empty_diversion">Tidak ada item pekerjaan periodik di area ini. Silakah pilih area lainnya.</string>
    <string name="text_work">Pekerjaan</string>
    <string name="text_area">Area</string>
    <string name="text_date_work">Tanggal Pekerjaan</string>
    <string name="text_do_you_approve_this_work">Anda menyetujui penyelesaian pekerjaan ini?</string>
    <string name="text_approve">Approve</string>
    <string name="text_back_work">Harap selesaikan pekerjaan ini. Silahkan kembali ke halaman daftar pekerjaan.
    </string>
</resources>