<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="24dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/login_activity_login_failed_dialog_title"
                    android:textAlignment="center"
                    android:textColor="@color/error"
                    android:textSize="@dimen/bodyText" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_below="@id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/login_activity_login_failed_dialog_message"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/paragraphText" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_coba_lagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_color"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/login_activity_login_failed_dialog_btn_coba_lagi"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/paragraphText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>