<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheets_background_white"
    android:layout_height="wrap_content">

    <View
        android:layout_width="70dp"
        android:layout_height="10dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_rounded_grey"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_image"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsregular"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d9d9d9"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/linear_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:src="@drawable/ic_outline_camera"/>

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_camera"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:src="@drawable/ic_outline_gallery"/>

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_galery"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>