<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheets_background_white"
    android:orientation="vertical">

    <View
        android:layout_width="70dp"
        android:layout_height="10dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_rounded_grey"/>

    <TextView
        android:id="@+id/tv1BottomAktivitasKunjungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/poppinsmedium"
        android:text="Approval Pekerjaan"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textSize="@dimen/_13ssp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#d9d9d9"/>

    <LinearLayout
        android:id="@+id/card_detail_diversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/rounded_dark_gray"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_date_work"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="0.8"/>
            <TextView
                android:id="@+id/tv_date_work"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Shift"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="0.8"/>
            <TextView
                android:id="@+id/tv_shift"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_work"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="0.8"/>
            <TextView
                android:id="@+id/tv_work"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_area"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="0.8"/>
            <TextView
                android:id="@+id/tv_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_do_you_approve_this_work"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppinsregular"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginBottom="100dp"
        android:paddingHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/poppinsmedium"
        android:background="@drawable/bg_primary"
        android:text="@string/text_approve"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />





</LinearLayout>