<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_cross_red" />

                <LinearLayout
                    android:id="@+id/layout_dialog_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="56dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

<!--                    <ImageView-->
<!--                        android:id="@+id/iv_not_verified"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_whatsapp" />-->

                    <TextView
                        android:id="@+id/tv_not_verified_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/email_not_verified_dialog_title"
                        android:textColor="@color/red"
                        android:textSize="@dimen/bodyText" />

                    <TextView
                        android:id="@+id/tv_not_verified_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center_horizontal"
                        android:text="@string/email_not_verified_dialog_message"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/paragraphText" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_dialog_message"
                    android:background="@color/red"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/not_verified_dialog_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/paragraphText" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>