<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.features_management.homescreen.closing.ui.activity.DiversionManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/app_bar_diversion"
            layout="@layout/app_bar_default"/>

        <TextView
            android:id="@+id/tv_choose_filter"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="Semua area penugasan"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_field"
            android:textColor="@color/grey2"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/poppinsregular"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawableTint="@color/grey2"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tv_total_diversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ringkasan"
            android:textColor="@color/black2"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/poppinsbold"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    layout="@layout/list_item_shimmer_diversion"/>

                <include
                    layout="@layout/list_item_shimmer_diversion"/>

                <include
                    layout="@layout/list_item_shimmer_diversion"/>

                <include
                    layout="@layout/list_item_shimmer_diversion"/>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_diversion"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_empty_diversion"
        android:fontFamily="@font/poppinsregular"
        android:textAlignment="center"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:background="@drawable/rounded_shape"
        android:fontFamily="@font/poppinsregular"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/text_back_work"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>